--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "phaser": "^3.60.0",
+    "webpack": "^5.82.1",
+    "webpack-cli": "^5.1.1"
   }
 }
