--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "phaser": "^3.60.0",
+    "socket.io-client": "^4.6.1",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
   }
