--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "nodemonConfig": {
+    "ignore": ["src/**", "public/**"]
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
