Pains of client interpolation

--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "nodemonConfig": {
-    "ignore": ["src/**", "public/**"]
+    "ignore": [
+      "src/**",
+      "public/**"
+    ]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "arcade-physics": "^0.1.0",
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "socket.io": "^4.6.1"
